The Grinder 3.5 (Not yet released)
----------------------------------

   Fix bug 3008924 - Jython 2.5, assertion error if script has __del__
   method. Thank to Thomas Falkenberg for the report.

   Fix bug 2988755 - NPE in JythonScriptExecutionException
   .tracebackToMessage(). Thanks to Brian Runck for the report.

   Fix bug 2952023 - Cookie.parse should recognise "httponly"(lower
   case). Thanks to amachang for the report and the patch.

   Fix bug 3092275 - Incorrect TPS totals in output log. Thanks to
   Travis Bear for the report.

   Fix bug 3132643 - No statistics to report. This occurred if a clock
   went backwards in time during a test, and prevented the test from
   ever executing successfully again. Thanks to Wallander for the
   report.

   Fix bug 3132940 - Incorrect connect/DNS times when connect timeout
   set. This was due to an error in the fix for 3132940. Thanks to
   Jagdish A for the report, and to Wallander for testing.

   Work around Jython issue 1894900. If the default Jython jar is used
   and it looks like the Jython cachedir has not been configured, then
   create a cache directory in lib.

   Fulfil feature request 3324241 - Upgrade to PicoContainer 2.13.6.
   Thanks to Alexis Bezverkhyy the request.


The Grinder 3.4
---------------

   Fix bug 2913297 - Memory leak in SSLControlImplementation. Thanks to
   Guido Serra for the report.

   Fix bug 1619450 - HTTPClient.TestCookie.testParse unit test fails.
   Thanks to amachang for re-opening this bug and providing a patch.

   Fix bug 2911790 - HTTP filter generates invalid code for Jython 2.5+.
   Thanks to the anonymous reporter.

   Fix bug 2921612 - DCR instrumentation did not work with
   HTTPRequest. Thanks to Anil Jacob for the report.

   Fulfil feature request 2914703 - Multipart form data support. Thanks
   to Hitoshi Amano for the request and the implementation.

   Fix bug 2919190 - setTimeout method does not effect read timeouts.