@@ -7,7 +7,7 @@ The Grinder 3.5 (Not yet released)
    Fix bug 2988755 - NPE in JythonScriptExecutionException
    .tracebackToMessage(). Thanks to Brian Runck for the report.
 
-   Fix bug 2952023 - Cookie.parse should recognise "httponly"(lower
+   Fix bug 2952023 - Cookie.parse should recognise "httponly" (lower
    case). Thanks to amachang for the report and the patch.
 
    Fix bug 3092275 - Incorrect TPS totals in output log. Thanks to
@@ -28,6 +28,10 @@ The Grinder 3.5 (Not yet released)
 
    Fulfil feature request 3324241 - Upgrade to PicoContainer 2.13.6.
    Thanks to Alexis Bezverkhyy the request.
+
+   Fix bug 3287570 - Memory leak in DCR instrumentation if same target
+   was recorded multiple times using the same Test. Thanks to John
+   (crystalstone) for the report.
 
 
 The Grinder 3.4
